// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DefaultErrorFallback > should render correctly with a Error type 1`] = `
<StaticLayout
  modalContent={
    <Styled(Container)
      header={
        <Header
          variant="h2"
        >
          Error
        </Header>
      }
    >
      <TextContent>
        <p>
          Testing an error
        </p>
      </TextContent>
    </Styled(Container)>
  }
/>
`;

exports[`DefaultErrorFallback > should render correctly with a SceneComposerRuntimeError type 1`] = `
<StaticLayout
  modalContent={
    <Styled(Container)
      header={
        <Header
          variant="h2"
        >
          Error
        </Header>
      }
    >
      <TextContent>
        <p>
          Testing a SceneComposerRuntimeError
        </p>
      </TextContent>
    </Styled(Container)>
  }
/>
`;

exports[`DefaultErrorFallback > should render correctly with a String type 1`] = `
<StaticLayout
  modalContent={
    <Styled(Container)
      header={
        <Header
          variant="h2"
        >
          Error
        </Header>
      }
    >
      <TextContent>
        <p>
          Testing a string
        </p>
      </TextContent>
    </Styled(Container)>
  }
/>
`;

exports[`DefaultErrorFallback > should render correctly with a Unknown type 1`] = `
<StaticLayout
  modalContent={
    <Styled(Container)
      header={
        <Header
          variant="h2"
        >
          Error
        </Header>
      }
    >
      <TextContent>
        <p>
          An unexpected error occurred.
        </p>
      </TextContent>
    </Styled(Container)>
  }
/>
`;
